Add functioning modularized language handler

--- a/portfolio-application/src/locales/ja-jp/application.json
+++ b/portfolio-application/src/locales/ja-jp/application.json
@@ -1,6 +1,9 @@
-{"views":
-  {"welcome":
-    {"index_copy":
+{
+  "views":
+  {
+    "welcome":
+    {
+      "index_copy":
       {
         "welcome":"Copy 私のポートフォリオにようこそ！"
       }
