--- a/portfolio-application/src/locales/en-pirate/application.json
+++ b/portfolio-application/src/locales/en-pirate/application.json
@@ -1,13 +1,16 @@
-{"views":
-  {"welcome":
-    {"index_copy":
+{
+  "views":
+  {
+    "welcome":
+    {
+      "index_copy":
       {
-        "welcome":"Copy of me app matey!"
+        "welcome": "Copy of me app matey!"
       }
     ,
     "index":
       {
-        "welcome":"Welcome to me app matey!"
+        "welcome": "Welcome to me app matey!"
       }
     }
   }
