--- a/portfolio-application/src/locales/en-us/application.json
+++ b/portfolio-application/src/locales/en-us/application.json
@@ -1,13 +1,16 @@
-{"views":
-  {"welcome":
-    {"index_copy":
+{
+  "views":
+  {
+    "welcome":
+    {
+      "index_copy":
       {
-        "welcome":"Copy of Welcome to my application!"
+        "welcome": "Copy of Welcome to my application!"
       }
     ,
     "index":
       {
-        "welcome":"Welcome to my application!!"
+        "welcome": "Welcome to my application!!"
       }
     }
   }
