Add standard service worker for now (seems to have a minor issue with version control)

--- a/portfolio-application/src/locales/en-pirate/application.json
+++ b/portfolio-application/src/locales/en-pirate/application.json
@@ -5,7 +5,7 @@
     {
       "index_copy":
       {
-        "welcome": "Copy of me app matey!"
+        "welcome": "Copy of me landing page's view matey!"
       }
     ,
     "index":
