--- a/portfolio-application/src/locales/en-us/application.json
+++ b/portfolio-application/src/locales/en-us/application.json
@@ -5,12 +5,12 @@
     {
       "index_copy":
       {
-        "welcome": "Copy of Welcome to my application!"
+        "welcome": "Copy of Welcome to my portfolio!"
       }
     ,
     "index":
       {
-        "welcome": "Welcome to my application!!"
+        "welcome": "Welcome to my portfolio!"
       }
     }
   }
