--- a/portfolio-application/src/locales/ja-jp/application.json
+++ b/portfolio-application/src/locales/ja-jp/application.json
@@ -5,7 +5,7 @@
     {
       "index_copy":
       {
-        "welcome":"Copy 私のポートフォリオにようこそ！"
+        "welcome":"ウェルカム画面のコピーであるこの一時的な画面へようこそ！"
       }
     ,
     "index":
