--- a/portfolio-application/src/locales/en-pirate/application.json
+++ b/portfolio-application/src/locales/en-pirate/application.json
@@ -1,15 +1,21 @@
 {
+  "common":{
+    "some_page": "Some place nowhere"
+  },
   "views":
   {
+    "standard":
+    {
+      "error_404":
+      {
+        "main": "This not be a page we got available matey."
+      }
+    },
     "welcome":
     {
-      "index_copy":
-      {
-        "welcome": "Copy of me landing page's view matey!"
-      }
-    ,
     "index":
       {
+        "short_link": "Home",
         "welcome": "Welcome to me app matey!"
       }
     }
