--- a/portfolio-application/src/locales/ja-jp/application.json
+++ b/portfolio-application/src/locales/ja-jp/application.json
@@ -1,15 +1,21 @@
 {
+  "common":{
+    "some_page": "存在しないページ"
+  },
   "views":
   {
+    "standard":
+    {
+      "error_404":
+      {
+        "main": "このページは存在しません."
+      }
+    },
     "welcome":
     {
-      "index_copy":
-      {
-        "welcome":"ウェルカム画面のコピーであるこの一時的な画面へようこそ！"
-      }
-    ,
     "index":
       {
+        "short_link": "ホーム",
         "welcome":"私のポートフォリオにようこそ！"
       }
     }
