Add schedule page for meeting availability

--- a/portfolio-application/src/locales/en-us/application.json
+++ b/portfolio-application/src/locales/en-us/application.json
@@ -1,7 +1,9 @@
 {
   "common": {
     "some_page": "A not available page",
-    "in_progress": "in progress"
+    "in_progress": "in progress",
+    "short_language": "en",
+    "short_locale": "en-us"
   },
   "settings": {
     "display_preferences": "Display Preferences"
@@ -16,6 +18,13 @@
       "index": {
         "short_link": "Home",
         "welcome": "Welcome to my portfolio!"
+      }
+    },
+    "schedule": {
+      "index": {
+        "short_link": "Schedule",
+        "short_title": "Schedule",
+        "long_title": "Samuel's availability for meetings and such"
       }
     }
   }
