--- a/portfolio-application/src/locales/ja-jp/application.json
+++ b/portfolio-application/src/locales/ja-jp/application.json
@@ -1,7 +1,9 @@
 {
   "common": {
     "some_page": "存在しないページ",
-    "in_progress": "未完成"
+    "in_progress": "未完成",
+    "short_language": "ja",
+    "short_locale": "ja-jp"
   },
   "settings": {
     "display_preferences": "表示設定"
@@ -16,6 +18,13 @@
       "index": {
         "short_link": "ホーム",
         "welcome": "私のポートフォリオにようこそ！"
+      }
+    },
+    "schedule": {
+      "index": {
+        "short_link": "スケージュール",
+        "short_title": "スケージュール",
+        "long_title": "ミーティングの時間などの提案のためのサミュエルの日程／アベイラビリティ"
       }
     }
   }
