--- a/portfolio-application/src/locales/en-pirate/application.json
+++ b/portfolio-application/src/locales/en-pirate/application.json
@@ -1,7 +1,9 @@
 {
   "common": {
     "some_page": "Some place nowhere",
-    "in_progress": "workin' on it"
+    "in_progress": "workin' on it",
+    "short_language": "en",
+    "short_locale": "en-pirate"
   },
   "settings": {
     "display_preferences": "How things be lookin' like"
@@ -16,6 +18,13 @@
       "index": {
         "short_link": "Home",
         "welcome": "Welcome to me app matey!"
+      }
+    },
+    "schedule": {
+      "index": {
+        "short_link": "Schedule",
+        "short_title": "My calendarrrr",
+        "long_title": "Times to be reachin' out to me for meetings and stuff"
       }
     }
   }
