--- a/portfolio-application/src/locales/ja-jp/application.json
+++ b/portfolio-application/src/locales/ja-jp/application.json
@@ -26,6 +26,12 @@
         "short_title": "スケージュール",
         "long_title": "ミーティングの時間などの提案のためのサミュエルの日程／アベイラビリティ"
       }
+    },
+    "resume": {
+      "index": {
+        "short_link": "職務経歴書",
+        "resource_url": "https://storage.googleapis.com/portfolio-media/Samuel%20Frost_%E5%B1%A5%E6%AD%B4%E6%9B%B8%E3%83%BB%E8%81%B7%E5%8B%99%E7%B5%8C%E6%AD%B4%E6%9B%B8.pdf"
+      }
     }
   }
 }
