Fix typo and improve japanese sentence a little

--- a/portfolio-application/src/locales/ja-jp/application.json
+++ b/portfolio-application/src/locales/ja-jp/application.json
@@ -38,7 +38,7 @@
         "3d_models_index": {
           "short_link": "3d モデル",
           "object_title_balcony": "アパートのベランダ、アマゾンで見ていた家具(赤)が入れるかどうかを考慮するためでしたので10分もかからないで作った簡単なモデルです。",
-          "object_title_house": "アメリカで作っていた家の計画案のためのモデルです。実際使っていたモデルは木などのレイヤーがあってもっと細かい情報がありますが、ぐちゃぐちゃにならないために非表示の状態です。"
+          "object_title_house": "アメリカで作っていた家の計画案のためのモデルです。実際使っていたモデルは木などのレイヤーがありますが、全部あると乱雑なのでいくつが非表示の状態です。"
         }
       }
     }
