--- a/portfolio-application/src/locales/ja-jp/application.json
+++ b/portfolio-application/src/locales/ja-jp/application.json
@@ -37,8 +37,12 @@
       "models": {
         "3d_models_index": {
           "short_link": "3d モデル",
-          "object_title_balcony": "アパートのベランダ、アマゾンで見ていた家具(赤)が入れるかどうかを考慮するためでしたので10分もかからないで作った簡単なモデルです。",
-          "object_title_house": "アメリカで作っていた家の計画案のためのモデルです。実際使っていたモデルは木などのレイヤーがありますが、全部あると乱雑なのでいくつが非表示の状態です。"
+          "object_description_microRoom": "カプセルホテルからインスピレーションを取って、一階建てようのビルのスペースを区切るための家具として考えたモデルです。",
+          "object_description_balcony": "Amazonで見ていた家具(赤)が入れるかどうかを考慮するためでしたので10分もかからないで作った簡単なモデルです。",
+          "object_description_house": "アメリカで作っていた家の計画案のためのモデルです。実際使っていたモデルは木などのレイヤーがありますが、全部あると乱雑なのでいくつが非表示の状態です。",
+          "object_name_microRoom": "マイクロ部屋",
+          "object_name_house": "家屋敷",
+          "object_name_balcony": "アパートのベランダ"
         }
       }
     }
