--- a/portfolio-application/src/locales/en-us/application.json
+++ b/portfolio-application/src/locales/en-us/application.json
@@ -37,8 +37,12 @@
       "models": {
         "3d_models_index": {
           "short_link": "3d models",
-          "object_title_balcony": "A quick sketchup of my apartment's balcony for planning furniture/storage (white objects already present, red being considered)",
-          "object_title_house": "A detailed to scale model of my real estate project - some planning layers have been left out"
+          "object_description_microRoom": "I have an interest in minimalist living, and so I was inspired to make some designs for what I was calling micro-rooms. The idea was to try to use concrete in the construction to limit vibration/sound transfer. I've since learned a lot about the subject and would definitely design these differently now.",
+          "object_description_house": "A to scale model of my real estate project which I created from scratch and used to obtain building permits. I've left out some planning layers such as vegetation and elevation to prevent clutter.",
+          "object_description_balcony": "This is a quick sketchup of my apartment's balcony and some furniture. I was considering purchasing something online and wanted to see how it would fit in with the existing objects and awkwardly shaped architechture. (white objects already present, red being considered)",
+          "object_name_microRoom": "Micro Room",
+          "object_name_house": "House / Real Estate",
+          "object_name_balcony": "Balcony"
         }
       }
     }
