--- a/portfolio-application/src/locales/en-us/application.json
+++ b/portfolio-application/src/locales/en-us/application.json
@@ -17,7 +17,8 @@
     "welcome": {
       "index": {
         "short_link": "Home",
-        "welcome": "Welcome to my portfolio!"
+        "welcome": "Welcome to my portfolio!",
+        "in_progress_statement": "I'm still working on some features and content on my portfolio, so while it would be a good idea for an engineer to look at the code base to get a good idea of my front end and general web development skills, it doesn't yet have a lot of content highlighting my achievements and capabilities."
       }
     },
     "schedule": {
