--- a/portfolio-application/src/locales/ja-jp/application.json
+++ b/portfolio-application/src/locales/ja-jp/application.json
@@ -17,7 +17,8 @@
     "welcome": {
       "index": {
         "short_link": "ホーム",
-        "welcome": "私のポートフォリオにようこそ！"
+        "welcome": "私のポートフォリオにようこそ！",
+        "in_progress_statement": "ポートフォリオの作成が進行中であるため、功績の内容はまだ全部載せていない状態です。技術者にとっていくつ面白い機能は実装されているので技術者の方にはリポジトリのほうで見たら私の技術のスキルが分かるかと思います。"
       }
     },
     "schedule": {
