Make in progress statement for Japanese better

--- a/portfolio-application/src/locales/ja-jp/application.json
+++ b/portfolio-application/src/locales/ja-jp/application.json
@@ -18,7 +18,7 @@
       "index": {
         "short_link": "ホーム",
         "welcome": "私のポートフォリオにようこそ！",
-        "in_progress_statement": "ポートフォリオの作成が進行中であるため、功績の内容はまだ全部載せていない状態です。技術者にとっていくつ面白い機能は実装されているので技術者の方にはリポジトリのほうで見たら私の技術のスキルが分かるかと思います。"
+        "in_progress_statement": "ポートフォリオの作成が進行中であるため、功績などの内容はまだ全部載せていない状態ですが、全体的の作りは最新の技術を生かして作っていますので技術者にとって面白いかもしれません。気が向いたらリポジトリのほうを見るといいです。"
       }
     },
     "schedule": {
