--- a/portfolio-application/src/locales/ja-jp/application.json
+++ b/portfolio-application/src/locales/ja-jp/application.json
@@ -18,7 +18,7 @@
       "index": {
         "short_link": "ホーム",
         "welcome": "私のポートフォリオにようこそ！",
-        "in_progress_statement": "ポートフォリオの作成が進行中であるため、功績などの内容はまだ全部載せていない状態ですが、全体的の作りは最新の技術を生かして作っていますので技術者にとって面白いかもしれません。気が向いたらリポジトリのほうを見るといいです。"
+        "in_progress_statement": "ポートフォリオの作成が進行中であるため、功績などの内容はまだ全部載せていない状態ですが、全体的の作りは最新の技術を活かして作っていますので技術者にとって面白いかもしれません。気が向いたらリポジトリのほうを見るといいです。"
       }
     },
     "schedule": {
